--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playwright-helper",
+  "name": "@vikasnl/playwright-helper",
   "version": "1.0.0",
   "description": "Playwright Helper Library for testing",
   "main": "./dist/src/playwright-lib/index.js",
@@ -60,7 +60,7 @@
     "eslint-config-prettier": "~9.1.0",
     "eslint-import-resolver-typescript": "~3.6.1",
     "eslint-plugin-import": "~2.29.1",
-    "eslint-plugin-jsdoc": "~50.2.1",
+    "eslint-plugin-jsdoc": "~50.2.2",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-prettier": "^5.2.1",
     "genson-js": "^0.0.8",
@@ -69,6 +69,6 @@
     "semantic-release": "~24.0.0",
     "typedoc": "~0.26.5",
     "typescript": "~5.5.4",
-    "winston": "~3.14.1"
+    "winston": "~3.14.2"
   }
 }
